# minuto

./: .gitignore  CHANGES.md  README.md  pyproject.toml
src/minuto/: check_oncall_rules.py  jsm.py  main.py  models.py
tests/: test_compensation_calculator.py  test_excel_export.py  test_jsm_parser.py  test_timezone_conversion.py
